# AI_Bot_News

./: .env.example  .gitignore  Dockerfile  Project M4-1.md  README.md  aibot.db  celery_worker.py  docker-compose.yml  pyproject.toml
app/: config.py  main.py  models.py  tasks.py  utils.py
app/ai/: generator.py
app/api/: endpoints.py  schemas.py
app/news_parser/: sites.py  telegram.py  types.py
app/telegram/: publisher.py
