[project]
name = "aibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.27.0",
    "aiosqlite>=0.22.1",
    "anthropic>=0.96.0",
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.3",
    "celery-types>=0.26.0",
    "fastapi>=0.136.0",
    "feedparser>=6.0.12",
    "greenlet>=3.1.0,<4.0.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.36.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
